--- a/src/component/calculator.module.css
+++ b/src/component/calculator.module.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@800&display=swap');
 /* main container */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .main{
     width: 500px;
-    height: 835px;
+    height: 680px;
     overflow: hidden;
-    background-color: #222;
+    background-color: #111313f9;
     border-radius: 15px;
     box-shadow: 5px 5px 20px black;
     position: relative;
-    margin-top: 10vw;
+    margin-top: 20vw;
+    margin-bottom: 10vh;
 }
 /* toggle styling */
 .toggle{
@@ -36,8 +42,8 @@
     width: 100%;
     text-align: center;
     background-color: transparent;
-    margin-top: 0;
-    color: #ff4500;
+    margin-top: 10px;
+    color: #9cd6ec;
     text-transform: uppercase;
     font-family: 'Martian Mono', monospace;
 }
@@ -49,29 +55,41 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #222;
+    background-color: transparent;
 }
 /* inputbox styling  */
 .inputCont input{
     width: 430px;
-    font-size: 50px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: 700;
     border: none;
-    color: #fff;
-    background-color: transparent;
+    color: #000;
+    background-color: #52ed67;
+    box-shadow: inset 3px 3px 5px #000 ;
+    outline: none;
     text-align: right;
+    padding-right: 8px;
 }
 /* buttons container styling */
 .keypad{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(125px, auto);
-    gap: 1px;
+    grid-auto-rows: minmax(50px, auto);
+    gap: 20px;
+    padding:30px;
+    padding-bottom: 70px;
+    background-color: #6ec5e8ed;
 }
 /* button styling */
 .keypad button{
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
-    transition: all 0.8s linear;
+    border-radius: 50%;
+   background-color: #9cd6ec;
+   box-shadow: 3px 3px 10px #000000c7;
+    padding: 10px;
+    transition: all 0.4s linear;
 }
 .keypad button:active{
     transform: scale(0.80);
@@ -85,9 +103,9 @@
     grid-column: 1/3;
 }
 /* operator button styling */
-.operator{
-    background-color: #ff4500;
-    color: #fff;
+.keypad .operator{
+    background-color: #52ed67;
+    color: #000;
 }
 /* responsive on small device */
 /* more than small device is also similar like bigger device */
